# buzz-kit-old

./: .env  .gitignore  .solitarc.js  Anchor.toml  README.md  deployments.json  member.json  package.json  tsconfig.json
programs/guild-kit/: Cargo.toml
programs/guild-kit/src/: errors.rs  lib.rs
programs/guild-kit/src/instructions/: anyone.rs  guild.rs  guild_kit.rs  invitation.rs  join.rs  mod.rs  remove.rs  request.rs
programs/guild-kit/src/state/: enums.rs  guild.rs  join.rs  kit.rs
programs/hpl-buzz-guild-kit/: Cargo.toml
programs/hpl-buzz-guild-kit/src/: assertion.rs  errors.rs
programs/hpl-buzz-guild-kit/src/instructions/: guild.rs  invitation.rs  join.rs  remove.rs  request.rs
programs/hpl-buzz-guild-kit/src/state/: mod.rs
scripts/: index.ts  kit.ts  precommit.js  publishshall.js  types.ts  utils.ts
scripts/assets/: devnet.json
